# esp32-clawd

./: .gitignore  README.md  setup.sh  start.sh  stop.sh  uninstall.sh
.claude/: settings.json
bridge/: package-lock.json  package.json  tsconfig.json
bridge/src/: cli-receiver.ts  index.ts  mdns.ts  state-cache.ts  ws-server.ts
docs/superpowers/plans/: 2026-06-28-esp32-clawd.md  2026-06-28-esp32-clawd.md.tasks.json
docs/superpowers/specs/: 2026-06-28-esp32-clawd-design.md
firmware/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/assets/: generate_placeholders.py
firmware/assets/building/: 0.raw  1.raw  2.raw  3.raw  4.raw  5.raw  6.raw  7.raw
firmware/assets/carrying/: 0.raw  1.raw  2.raw  3.raw  4.raw  5.raw  6.raw  7.raw
firmware/assets/error/: 0.raw  1.raw  2.raw  3.raw  4.raw  5.raw  6.raw  7.raw
firmware/assets/happy/: 0.raw  1.raw  2.raw  3.raw  4.raw  5.raw  6.raw  7.raw
firmware/assets/idle/: 0.raw  1.raw  2.raw  3.raw  4.raw  5.raw  6.raw  7.raw  frames.txt
firmware/assets/notification/: 0.raw  1.raw  2.raw  3.raw  4.raw  5.raw  6.raw  7.raw
firmware/main/: CMakeLists.txt  buttons.cc  buttons.h  display.cc  display.h  gif_player.cc  gif_player.h  idf_component.yml  main.cc  speaker.cc  speaker.h  state_machine.cc  state_machine.h  status_bar.cc  status_bar.h  websocket_client.cc  websocket_client.h  wifi.cc  wifi.h  wifi_ap.h  wifi_setup.cc  wifi_setup.h
firmware/scripts/: convert_calico.py  convert_clawd.py  flash_assets.sh  gen_frames.py
hooks/: claude-hooks.json
scripts/: test_states.sh
(+51 files in other folders)
